bk_ida/gccida/g0/write_dependence_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/write_dependence_p/src/alias.c:2668:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/write_dependence_p/src/alias.c:2669:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)mem + 2)) ) 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/write_dependence_p/src/obj/alias.o] Error 1
